<resources>
    <string name="app_name">省摳摳</string>
    <string name="myRecording">記錄</string>
    <string name="setting">設定</string>
    <string name="statistics">統計</string>
    <string name="itemName">項目</string>
    <string name="paid">花費</string>
    <string name="addRecording">新增花費</string>
    <string name="editRecording">編輯紀錄</string>
    <string name="dateTime">日期</string>
    <string name="spent">花費</string>
    <string name="itemType">種類</string>
    <string name="noChoose">未選取</string>
    <string name="add">儲存</string>
    <string name="nextItem">下一個</string>
    <string name="typeColor">種類</string>

    <string name="type01">娛樂</string>
    <string name="type02">交通</string>
    <string name="type03">家居</string>
    <string name="type04">健康</string>
    <string name="type05">食物</string>
    <string name="type06">社交</string>
    <string name="type07">服飾</string>
    <string name="type08">雜物</string>
    <string name="type09">房租</string>
    <string name="type10">水費</string>
    <string name="type11">電費</string>
    <string name="type12">其他</string>

    <string name="editType">編輯種類</string>
    <string name="cancel">取消</string>
    <string name="save">儲存</string>
    <string name="chooseType">選擇種類</string>
    <string name="total">總計</string>
    <string name="dollarSymbol">$</string>
    <string name="close">關閉</string>
    <string name="today">今天</string>
    <string name="delete">刪除</string>
    <string name="ok">確定</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="noRecording">還沒有支出哦。</string>
    <string name="calculation">計算</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="doubleZero">00</string>
    <string name="dot">.</string>
    <string name="addition">+</string>
    <string name="substraction">-</string>
    <string name="times">×</string>
    <string name="division">÷</string>
    <string name="equal">=</string>
    <string name="calculationSpend">計算花費</string>
    <string name="clean">C</string>
    <string name="done">完成</string>

    <string name="MON">週一</string>
    <string name="TUE">週二</string>
    <string name="WED">週三</string>
    <string name="THU">週四</string>
    <string name="FRI">週五</string>
    <string name="SAT">週六</string>
    <string name="SUN">週日</string>
    <string name="create">新增</string>
    <string name="red">紅</string>
    <string name="green">綠</string>
    <string name="blue">藍</string>
    <string name="createType">新增種類</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="quicklyAdd">快速新增</string>
    <string name="commingSoon">敬請期待</string>
</resources>
