<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <android.support.v7.widget.CardView
        android:id="@+id/cvTopWeekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SUN"
                    android:textColor="@color/colorRed" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MON" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TUE" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/WED" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/THU" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FRI" />

                <TextView
                    style="@style/calendarWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/SAT" />

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvTopWeekday" />

</RelativeLayout>


